--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,25 +1,26 @@
 workflows:
-  build_web:
-    name: Build CoinPal Frontend
-    max_build_duration: 20
+  flutter-android:
+    name: Build Flutter APK (appcryvault)
+    max_build_duration: 60
     environment:
+      flutter: stable
+      xcode: latest
+      android: latest
       vars:
-        NODE_VERSION: 18.18.0
-      node: $NODE_VERSION
+        PACKAGE_NAME: "com.coinpall.appcryvault"
     scripts:
-      - name: Navigate to web folder
+      - name: Set up Flutter dependencies
         script: |
-          cd web
-      - name: Install dependencies
+          flutter pub get
+      - name: Build release APK
         script: |
-          cd web
-          npm install
-      - name: Build project
-        script: |
-          cd web
-          npm run build
+          flutter build apk --release
     artifacts:
-      - web/dist/**
+      - build/app/outputs/flutter-apk/app-release.apk
     publishing:
-      scripts:
-        - echo "Build completed for CoinPal web"
+      email:
+        recipients:
+          - aisbondeng@gmail.com
+        notify:
+          success: true
+          failure: true
